--- a/myapp/views/addEvent.hbs
+++ b/myapp/views/addEvent.hbs
@@ -179,6 +179,11 @@
                             <label for="eventImage" class="form-label">Event Image</label>
                             <input type="file" class="form-control" id="eventImage" name="image">
                         </div>
+                        <div class="mb-3">
+                            <label for="eventForm" class="form-label">Forms link</label>
+                            <input type="text" class="form-control" id="eventForm" placeholder="Copy paste the form link"
+                                name="formLink">
+                        </div>
                         <button type="submit" class="btn btn-primary">Add Event</button>
                     </form>
                 </div>
