--- a/myapp/views/events.hbs
+++ b/myapp/views/events.hbs
@@ -279,7 +279,7 @@
                         <p>{{this.description}}</p>
                     </div>
                     <div class="button-wrapper">
-                        <a href="/event/{{this._id}}" class="btn outline">DETAILS</a>
+                        <a href="/events/{{this._id}}" class="btn outline">DETAILS</a>
                     </div>
                 </div>
                 {{/unless}}
@@ -300,7 +300,7 @@
                         <p>{{this.description}}</p>
                     </div>
                     <div class="button-wrapper">
-                        <a href="/event/{{this._id}}" class="btn outline">DETAILS</a>
+                        <a href="/events/{{this._id}}" class="btn outline">DETAILS</a>
                     </div>
                 </div>
                 {{/if}}
