--- a/myapp/views/events.hbs
+++ b/myapp/views/events.hbs
@@ -13,12 +13,6 @@
         /* General styling */
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(45deg, rgba(0, 212, 255, 1) 0%, rgba(11, 3, 45, 1) 100%);
-            backdrop-filter: blur(9px) saturate(170%);
-            -webkit-backdrop-filter: blur(10px) saturate(130%);
-            background-image: url('images/bgimg.jpg');
-            background-size: cover;
-            background-position: center;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -222,7 +216,7 @@
     </style>
 </head>
 
-<body>
+<body class="bg-white dark:bg-gray-900">
     <nav class="w-full bg-transparent h-fit overflow-hidden fixed top-0 left-0 z-50">
         <div class="py-4 lg:px-8 px-4 max-w-[4120px] h-16 mx-auto text-white flex items-center justify-between">
             <div class="lg:w-1/2">
