--- a/myapp/views/admin-members.hbs
+++ b/myapp/views/admin-members.hbs
@@ -10,11 +10,12 @@
         body {
             background-color: #272727;
             color: #ffffff;
+            margin: 0;
+            padding: 0;
         }
 
         .sidebar {
-            margin: 0;
-            padding: 0;
+            margin-left: -12px;
             width: 200px;
             background-color: #1f1f1f;
             position: fixed;
