--- a/myapp/views/admin-events.hbs
+++ b/myapp/views/admin-events.hbs
@@ -8,13 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
+            margin: 0;
+            padding: 0;
             background-color: #272727;
             color: #ffffff;
         }
 
         .sidebar {
-            margin: 0;
-            padding: 0;
+            margin-left: -12px;
             width: 200px;
             background-color: #1f1f1f;
             position: fixed;
