--- a/myapp/views/contact.hbs
+++ b/myapp/views/contact.hbs
@@ -7,14 +7,26 @@
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kode+Mono:wght@400..700&display=swap"
+        rel="stylesheet">
     <title>Contact Us - init() IT Association</title>
     <style>
+         html {
+            color-scheme: dark;
+            /* or use 'dark' if you want your website to always be dark themed */
+        }
         body {
             margin: 0;
             padding: 0;
         }
         nav {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: "Kode Mono", monospace;
+            font-optical-sizing: auto;
+            font-weight: <weight>;
+            font-style: normal;
         }
        
         main {
