--- a/myapp/views/members.hbs
+++ b/myapp/views/members.hbs
@@ -7,9 +7,24 @@
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kode+Mono:wght@400..700&display=swap"
+        rel="stylesheet">
     <title>Our Team - init() IT Association</title>
     <style>
+         html {
+            color-scheme: dark;
+            /* or use 'dark' if you want your website to always be dark themed */
+        }
+        nav,
+        {
+            font-family: "Kode Mono", monospace;
+            font-optical-sizing: auto;
+            font-weight: <weight>;
+            font-style: normal;
+        }
         main {
             display: flex;
             align-items: center;
