--- a/myapp/views/about.hbs
+++ b/myapp/views/about.hbs
@@ -205,7 +205,8 @@
     </style>
 </head>
 
-<body class="bg-white dark:bg-gray-900">
+<body class="bg-gray-900">
+
     <nav class="w-full bg-transparent h-fit overflow-hidden fixed top-0 left-0 z-50">
         <div class="py-4 lg:px-8 px-4 max-w-[1920px] h-16 mx-auto text-white flex items-center justify-between">
             <div class="lg:w-1/2">
