--- a/myapp/views/contact.hbs
+++ b/myapp/views/contact.hbs
@@ -124,7 +124,8 @@
 
 </head>
 
-<body class="bg-white dark:bg-gray-900">
+<body class="bg-gray-900">
+
     <nav class="w-full bg-transparent h-fit overflow-hidden fixed top-0 left-0 z-50">
         <div class="py-4 lg:px-8 px-4 max-w-[4120px] h-16 mx-auto text-white flex items-center justify-between">
             <div class="lg:w-1/2">
