fixed color theme issue

--- a/myapp/views/about.hbs
+++ b/myapp/views/about.hbs
@@ -200,7 +200,11 @@
         .cta button:hover {
             background-color: #E0E7FF;
         }
-
+@media (prefers-color-scheme: light) {
+  html {
+    color-scheme: dark; /* Force dark mode */
+  }
+}
         
     </style>
 </head>
