--- a/myapp/views/eventDetails.hbs
+++ b/myapp/views/eventDetails.hbs
@@ -13,6 +13,11 @@
         rel="stylesheet">
     <title>Init-IT Association</title>
     <style>
+        @media (prefers-color-scheme: light) {
+  html {
+    color-scheme: dark; /* Force dark mode */
+  }
+}
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap');
          html {
             color-scheme: dark;
