--- a/myapp/views/eventupdate.hbs
+++ b/myapp/views/eventupdate.hbs
@@ -113,6 +113,11 @@
                 float: none;
             }
         }
+        @media (prefers-color-scheme: light) {
+  html {
+    color-scheme: dark; /* Force dark mode */
+  }
+}
     </style>
 </head>
 
