--- a/myapp/views/members.hbs
+++ b/myapp/views/members.hbs
@@ -14,6 +14,11 @@
         rel="stylesheet">
     <title>Our Team - init() IT Association</title>
     <style>
+        @media (prefers-color-scheme: light) {
+  html {
+    color-scheme: dark; /* Force dark mode */
+  }
+}
          html {
             color-scheme: dark;
             /* or use 'dark' if you want your website to always be dark themed */
