--- a/myapp/views/contact.hbs
+++ b/myapp/views/contact.hbs
@@ -173,7 +173,7 @@
         </div>
     </nav>
     
-    <section class="bg-white dark:bg-gray-900 mt-8 fade-in">
+    <section class="bg-gray-900 mt-8 fade-in">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md fade-in">
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us
             </h2>
