--- a/myapp/views/events.hbs
+++ b/myapp/views/events.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,25 +16,29 @@
     <title>Events - init() IT Association</title>
     <style>
         @media (prefers-color-scheme: light) {
-  html {
-    color-scheme: dark; /* Force dark mode */
-  }
-}
+            html {
+                color-scheme: dark;
+                /* Force dark mode */
+            }
+        }
+
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap');
 
         /* General styling */
-         html {
+        html {
             color-scheme: dark;
             /* or use 'dark' if you want your website to always be dark themed */
         }
+
         nav {
             font-family: "Kode Mono", monospace;
             font-optical-sizing: auto;
             font-weight: <weight>;
             font-style: normal;
         }
+
         body {
-            
+
             display: flex;
             align-items: center;
             justify-content: center;
